--- a/Lab3/DM_practice_3.ipynb
+++ b/Lab3/DM_practice_3.ipynb
@@ -40,7 +40,7 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
+        "\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -449,10 +449,13 @@
       "source": [
         "**Аналіз отриманих результатів**:\n",
         "\n",
-        "1.   ...\n",
-        "2.   ...\n",
-        "3.   ...  \n",
-        "\n"
+        "Всі моделі були натреновані в базовій конфігурації без **fine тюнингу**. \\\n",
+        "В першому сеті даних, який є лінійно роздільний, я застосував не тільки лінійно роздільні моделі. Це були **SVM**, **KNN** та **Random Forest**. Після базового тренування цих моделей, я отримав такі результати:\n",
+        "- SVM Accuracy: 99.67%\n",
+        "- KNN Accuracy: 99.86%, Optimal K-neighbours numbers is 1\n",
+        "- Random Forest Accuracy: 99.67%\n",
+        "\n",
+        "В цілому, всі моделі показали майже найвищий можливий результат, тому для датасету з 2 лінійно роздільними класами підійде будь-яка з підібраних моделей (з коробки).\n"
       ]
     },
     {
@@ -801,12 +804,15 @@
         "id": "12CGT7aBBteY"
       },
       "source": [
-        "**Аналіз отриманих результатів**:\n",
+        "`**Аналіз отриманих результатів**:\n",
         "\n",
-        "1.   ...\n",
-        "2.   ...\n",
-        "3.   ...  \n",
-        "\n"
+        "Всі моделі були натреновані в базовій конфігурації без **fine тюнингу**. \\\n",
+        "В цьому сеті даних, який вже є НЕ лінійно роздільним, я використав такі моделі: **SVM**, **Random Forest** та **Decision Tree**. На цей раз, я вирішив провести маленький експеримент. Спочатку я натренував ансамбль модель **Random Forest**, який всередині має **100** рандомно сконфігурованих **Decision Tree**. І далі, я взяв сам **Decision Tree**, але тільки один екземпляр. І якощ порівнювати, то ансамбль, як і очікувалось справився краще, чим тількі одна модель. І після тренування цих моделей, я отримав такі результати:\n",
+        "- SVM Accuracy: 98.52%\n",
+        "- Random Forest Accuracy: 98.15%\n",
+        "- Decision Tree Accuracy: 97.04%\n",
+        "\n",
+        "Знову ж таки, всі моделі показали непоганий результат, але найкраще справились **SVM** та **Random Forest**.`"
       ]
     },
     {
@@ -1217,9 +1223,13 @@
       "source": [
         "**Аналіз отриманих результатів**:\n",
         "\n",
-        "1.   ...\n",
-        "2.   ...\n",
-        "3.   ...  "
+        "Всі моделі були натреновані в базовій конфігурації без **fine тюнингу**. \\\n",
+        "В цьому сеті даних, який також є НЕ лінійно роздільним, я використав такі моделі: **SVM**, **Random Forest** та **KNN**. Результати:\n",
+        "- Random Forest Accuracy: 99.00%\n",
+        "- KNN Accuracy: 100.00%, Optimal K-Neighbours number is 3\n",
+        "- SVM Accuracy: 54.00%\n",
+        "\n",
+        "В цьому випадку найкраще справились можелі **Random Forest** та **KNN**. А ось **SVM** показала жахливий результат в **54%** точності."
       ]
     },
     {
@@ -1565,17 +1575,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 21,
-      "metadata": {
-        "id": "fI7dzPXqC-8b"
-      },
-      "outputs": [],
-      "source": [
-        "# code"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "XAzIXURHFpOs"
@@ -1583,9 +1582,13 @@
       "source": [
         "**Аналіз отриманих результатів**:\n",
         "\n",
-        "1.   ...\n",
-        "2.   ...\n",
-        "3.   ...  "
+        "Всі моделі були натреновані в базовій конфігурації без **fine тюнингу**. \\\n",
+        "Цей датасет мабуть є найскладнішим, для завдання класифікації. Тут я використав такі моделі: **SVM**, **Random Forest** та вирішив ще спробувати **Linear Regression with Polynomial Features**. Результати вийшли такими:\n",
+        "- SVM Accuracy: 48.33%\n",
+        "- Random Forest Accuracy: 95.67%\n",
+        "- Linear Regression with Polynomial Features Accuracy: 56.67%\n",
+        "\n",
+        "І в останньому завданні, як і очікувалось найкращий результат показала ансамблева модель **Random Forest** з результатом **95%**. А ось **SVM** та **Лінійна регресія** в цьому випадку показали в середньому **50%**, що є поганим результатом. це звісно не дуже хороший приклад використання Лінійної Регресії, але було цікаво спробувати, який вона покаже результат."
       ]
     }
   ],
